Revision history for Perl extension Promise::XS:

0.03
    - Optimize all() and race() by reducing number of Perl callbacks
    - Attempt to support ithreads. (Thank you, RANDIR!)
    - Add GitHub data to Makefile.PL

0.02 Mon Dec 30 2019
    - Make then(), catch(), and finally() create objects in the same class
      as the context object. Add documentation about subclassing.

0.01 Sun Dec 29 2019
    - Initial release